styles.css
body {
  margin: 0px;
  font-family: 'Lato', sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #f0f0f0;
}

header, nav, main, footer {
  margin: auto;
  width: 720px;
  max-width: 100%;
  background-color: white;
}

header {
  padding-top: 32px;
}

header h1 {
  color: seagreen;
  font-family: 'Charmonman', cursive;
  font-weight: 300;
  font-size: 64;
  text-align: center;
}

header h1 a {
  color: seagreen;
  text-decoration: none;
}

header h1 a:hover {
  border-bottom: none;
}

nav ul {
  list-style: none;
  display: flex;
  justify-content: center;
}

nav li {
  margin-left: 38px;
  margin-right: 38px;
  display: inline-block;
  font-weight: 500;
  border-bottom: 1px solid transparent;
}

nav .current {
  border-bottom: 1px solid seagreen;
}

nav .current a {
  color: seagreen;
}

nav li:hover {
  border-bottom: 1px solid seagreen;
  transition: border-bottom 1s;
}

footer {
  padding-top: 16px;
  padding-bottom: 32px;
  text-align: center;
}

nav a, footer a {
  color: dimgray;
  text-decoration: none;
}

nav a:hover, footer a:hover {
  color: seagreen;
  transition: color 1s;
}

main hr {
  border: 0;
  height: 1px;
  background-image: linear-gradient(
    to right,
    rgba(46, 139, 87,0),
    rgba(46, 139, 87,.75),
    rgba(46, 139, 87,0));
}

main article {
  margin: auto;
  padding-top: 32px;
  padding-bottom: 32px;
  padding-left: 48px;
  padding-right: 48px;
  font-size: 1.1em;
  max-width: 50ch;
}

main article h1 {
  color: seagreen;
  font-family: 'Charmonman', cursive;
  font-weight: 300;
  font-size: 1.4em;
  text-align: center;
}

main aside {
  padding: 4px;
  font-size: 0.9em;
  text-align: center;
}

main aside h1 {
  color: seagreen;
  font-family: 'Lato', sans-serif;
  font-style: italic;
  font-size: 1.2em;
}

main aside table {
  margin: auto;
}

main aside .left {
  text-align: left;
}

main aside .right {
  text-align: right;
}

main .signature {
  margin: 0px;
  padding-top: 12px;
  color: seagreen;
  font-family: 'Charmonman', cursive;
  font-weight: 300;
  font-size: 1.3em;
  text-align: center;
}

main .occupation {
  margin: 0px;
  color: dimgray;
  font-family: 'Lato', sans-serif;
  font-size: 0.8em;
  text-align: center;
}

